# cleantmp

./: README.md
cleantmp/: __main__.py  pyproject.toml
