[project]
name = 'cleantmp'
version = '0.1.0'
description = 'Aplicación que elimina archivos temporales o basura que aparecen en directorios de usuario (como carpetas con música, fotos, etc.), y que no son archivos de sistema o logs formales, sino cosas como caché residual o metadatos inútiles.'
authors = [
  { name = 'Marcos Cuadrado Rey', email = 'marcoscr4981@gmail.com' }
]
readme = 'README.md'
license = { file = 'LICENSE.txt' }
requires-python = '>=3.8'
dependencies = [
  # Lista tus dependencias aquí
]

[project.scripts]
mi-cli = 'cleantmp.cli:main'

[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'
